<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueFON"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Vibor"
            android:textSize="25sp"
            android:paddingStart="110dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="24dp"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/triangle"/>

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Vib_fig"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext"/>
        
        <EditText
            android:id="@+id/values"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Values"
            android:inputType="text"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext"/>

        <Button
            android:id="@+id/ButtonCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/But_Calc"
            android:textColor="@color/white"
            android:background="@drawable/regbutton"
            android:layout_marginTop="24dp"/>

    </LinearLayout>


</ScrollView>